# ocr

./: .gitignore
ocr/: CMakeLists.txt  main.cc
ocr/include/base/: ocr_structs.h
ocr/include/model/: angle_net.h  crnn_net.h  db_net.h  ocr_lite.h
ocr/include/utils/: clipper.hpp  file_utils.h  image_utils.h  ocr_utils.h  time_utils.h
ocr/src/model/: angle_net.cc  crnn_net.cc  db_net.cc  ocr_lite.cc
ocr/src/utils/: clipper.cc  file_utils.cc  image_utils.cc  ocr_utils.cc  time_utils.cc
